--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Neat Starter
+title: Zyroz Development
 path: home
 ---
 
@@ -13,9 +13,9 @@ path: home
   </h1>
 
   <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
+    A small Development Blog. Visit
+    <code class="bg-gray-100 text-blue-800 p-1"> /blog/</code>
+    to see our Posts :)
   </p>
 
   {% include "./_includes/partials/content.html" %}
